2006-08-17 Ian Rutt
 * Added beginnings of consolidated projection code:
	glimmer_map_types.F90
	glimmer_map_init.F90
	glimmer_map_trans.F90

2006-08-16 Ian Rutt
 * Removed long-redundant restart code in glint_proj.F90

2006-08-14 Ian Rutt
 * Fixed tiny bug in glint.f90 - orog argument is now intent(in), not intent(inout).

2006-08-09 Ian Rutt
 * Fixed pointer nullification bug in glimmer_ncparms.F90 (Thanks to Oli
 Browne for finding this one).
 * Fixed glint logging bug - multiple instances generated fort.101
 file. Moved close log outside glide_finalise and updated all driver
 programs accordingly.

2006-08-01 Ian Rutt
 * Corrected typo: finialise_elastic -> finalise_elastic

2006-06-18 Magnus Hagdorn
 * src/fortran/test_integrate.F90: minor fix to make it compile with gfortran

2006-06-18 Magnus Hagdorn
 * src/python/glide_launch.py: need to add \n for gfortran

2006-06-18 Magnus Hagdorn
 * src/fortran/Makefile.am: rename files *.f90 -> *.F90
 * src/python/generate_ncvars.py: ditto
 * src/fortran/*.f90: rename to *.F90, add preprocessor machinery to load
   config.inc
 * bootstrap: add call to autoheader
 * configure.in: rename .f90 -> .F90, use autoheader to generate config.inc

2006-06-15 Ian Rutt
 * Added precip scaling option to glint_example_clim.f90

2006-05-29 Ian Rutt
 * spelling mistakes in glint_vars.def corrected. (Thanks to Oli Browne)

2006-05-21 Stewart Jamieson
 * glide_vars.def: annual massbalance can be averaged over time
 * glide_types.f90: add new variable for averaging annual 
   massbalance

2006-05-18 Ian Rutt
 * Minor bugfix to profiling (mistake in glide_stop.f90 - non-existent
 derived type element)

2006-05-10 Ian Rutt
 * Minor enhancements/bugfixes to EISMINT3GL driver
 * Minor doc change in glide_types.f90 (thanks, Oli)
	
2006-05-02 Ian Rutt
 * Added temperature half-range to glint output variables as glint_arng
 * Cleared up series of important confusions/bugs in mass-balance